@@ -1,8 +1,9 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/fsutils.r
-\name{file.hardlink}
+\name{nat.utils-defunct}
 \alias{file.hardlink}
-\title{Make hardlink to file}
+\alias{nat.utils-defunct}
+\title{nat.utils: Defunct functions}
 \usage{
 file.hardlink(from, to)
 }
@@ -11,17 +12,10 @@ file.hardlink(from, to)
 
 \item{to}{(New) target hardlink file to create}
 }
-\value{
-logical indicating success
-}
 \description{
-Used system call to access 'ln' command line utility. Now deprecated in
-favour of recently introduced file.link function in base R.
-}
-\author{
-jefferis
+These functions have been retired from \code{nat.utils}
 }
 \seealso{
-\code{\link{file.symlink}}
+\code{\link{file.link}}
 }
 
