@@ -1,6 +1,9 @@
 nat.utils 0.5
 ===============
 * new function common_path finds common prefix of multiple paths
+* new function split_path breaks a path into its components, optionally 
+  including file separators.
+* file.hardlink is now defunct
 * dev: imports utils::read.table
 
 nat.utils 0.4.3
